Example app: Fix "new" not centered beneath new button

--- a/docs/example/ui/FloatingActionButton.css
+++ b/docs/example/ui/FloatingActionButton.css
@@ -21,6 +21,10 @@
 	border: none;
 	color: black;
 
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
 	--icon-color: black;
 	--shadow-color: rgba(0, 0, 0, 0.5);
 	--button-width: 50px;
