--- a/docs/example/ui/loadFromSaveList.css
+++ b/docs/example/ui/loadFromSaveList.css
@@ -29,6 +29,7 @@
 
 .save-item .icon {
     max-height: 100%;
+    width: 50px;
 }
 
 .save-item button:hover {
